--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@
         <div class="container">
             <h2>Contate-nos</h2>
             <p>Entre em contato conosco para perguntas, comentários ou pedidos personalizados.</p>
-            <a href="https://wa.me/message/LUCI7E7ESSUYL1" class="btn">Enviar Mensagem</a>
+            <a href="whatsapp://send?phone=seu-número" class="btn">
+                <img src="./whatsapp.webp" alt="WhatsApp">
+                Enviar Mensagem
+            </a>            
+            <br>
+            <br>
+            <br>
         </div>
     </section>
 
