--- a/index.html
+++ b/index.html
@@ -44,28 +44,32 @@
             <div class="product">
                 <img src="verao.jpg" alt="Verão">
                 <h3>Verão</h3>
-                <p>A vela de Morango com Chantilly oferece uma experiência emocionante, despertando prazer e conforto com sua fragrância única. Seu design em vidro marmorizado rosa adiciona um toque de moda à decoração, tornando cada momento especial.</p>
+                <p>A vela de Morango com Chantilly oferece uma experiência emocionante, despertando prazer e conforto com sua fragrância única. 
+                    <br><br>Seu design em vidro marmorizado rosa adiciona um toque de moda à decoração, tornando cada momento especial.</p>
                 <p class="price">R$44,90</p>
                 <a href="https://wa.me/message/LUCI7E7ESSUYL1" class="btn_comprar" target="_blank">Comprar</a>
             </div>
             <div class="product">
                 <img src="outono.jpg" alt="Outono">
                 <h3>Outono</h3>
-                <p>O aroma de cereja e avelã proporciona conforto, bem-estar e alegria, criando uma atmosfera acolhedora e relaxante. Sua fragrância envolvente estimula os sentidos, promovendo momentos de prazer e descontração. Ideal para momentos de relaxamento e tranquilidade.</p>
+                <p>O aroma de cereja e avelã proporciona conforto, bem-estar e alegria, criando uma atmosfera acolhedora e relaxante. 
+                    <br><br>Sua fragrância envolvente estimula os sentidos, promovendo momentos de prazer e descontração. Ideal para momentos de relaxamento e tranquilidade.</p>
                 <p class="price">R$44,90</p>
                 <a href="https://wa.me/message/LUCI7E7ESSUYL1" class="btn_comprar">Comprar</a>
             </div>
             <div class="product">
                 <img src="inverno.jpg" alt="Inverno">
                 <h3>Inverno</h3>
-                <p>O aroma de baunilha oferece um abraço reconfortante, aliviando o estresse e a ansiedade, enquanto proporciona conforto e relaxamento. A vela em tons de prata adiciona elegância, guiando para um estado de serenidade e bem-estar.</p>
+                <p>O aroma de baunilha oferece um abraço reconfortante, aliviando o estresse e a ansiedade, enquanto proporciona conforto e relaxamento. 
+                    <br><br>A vela em tons de prata adiciona elegância, guiando para um estado de serenidade e bem-estar.</p>
                 <p class="price">R$44,90</p>
                 <a href="https://wa.me/message/LUCI7E7ESSUYL1" class="btn_comprar">Comprar</a>
             </div>
             <div class="product">
                 <img src="canela.jpg" alt="Canela">
                 <h3>Canela</h3>
-                <p>O aroma de canela não apenas melhora a concentração, mas também diminui o estresse, induzindo um estado de espírito positivo. Nossa vela, com pedaços de casca de canela, proporciona uma experiência revitalizante e confortante, como um abraço em meio à agitação do cotidiano.</p>
+                <p>O aroma de canela não apenas melhora a concentração, mas também diminui o estresse, induzindo um estado de espírito positivo. 
+                    <br><br>Nossa vela, com pedaços de casca de canela, proporciona uma experiência revitalizante e confortante, como um abraço em meio à agitação do cotidiano.</p>
                 <p class="price">R$44,90</p>
                 <a href="https://wa.me/message/LUCI7E7ESSUYL1" class="btn_comprar">Comprar</a>
             </div>
