--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="container">
             <h2>Contate-nos</h2>
             <p>Entre em contato conosco para perguntas, comentários ou pedidos personalizados.</p>
-            <a href="whatsapp://send?phone=seu-número" class="btn">
+            <a href="https://wa.me/message/LUCI7E7ESSUYL1" class="btn">
                 <img src="./whatsapp.webp" alt="WhatsApp">
                 Enviar Mensagem
             </a>            
