--- a/agradecimento.html
+++ b/agradecimento.html
@@ -42,6 +42,17 @@
             background-color: #8c6f4b; /* Cor de fundo do botão ao passar o mouse */
         }
     </style>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NPH46M7869">
+    </script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-NPH46M7869');
+    </script>
 </head>
 <body>
     <nav class="navbar">
