--- a/index.html
+++ b/index.html
@@ -16,6 +16,30 @@
 
     gtag('config', 'G-NPH46M7869');
     </script>
+
+    <!-- Google tag (gtag.js) event - delayed navigation helper -->
+    <script>
+        // Helper function to delay opening a URL until a gtag event is sent.
+        // Call it in response to an action that should navigate to a URL.
+        function gtagSendEvent(url) {
+            var callback = function () {
+                if (typeof url === 'string') {
+                window.location = url;
+                }
+            };
+            gtag('event', 'ads_conversion_Contato_1', {
+                'event_callback': callback,
+                'event_timeout': 2000,
+                // <event_parameters>
+            });
+            return false;
+        }
+
+        document.getElementById('link_comprar').addEventListener('click', function() {
+            // Chame o método desejado aqui
+            return gtagSendEvent("https://wa.me/message/LUCI7E7ESSUYL1");
+        });
+    </script>
 </head>
 <body>
     <nav class="navbar">
@@ -47,7 +71,7 @@
                 <p>A vela de Morango com Chantilly oferece uma experiência emocionante, despertando prazer e conforto com sua fragrância única. 
                     <br><br>Seu design em vidro marmorizado rosa adiciona um toque de moda à decoração, tornando cada momento especial.</p>
                 <p class="price">R$44,90</p>
-                <a href="https://wa.me/message/LUCI7E7ESSUYL1" class="btn_comprar" target="_blank">Comprar</a>
+                <a href="https://wa.me/message/LUCI7E7ESSUYL1" class="btn_comprar" id="link_comprar" target="_blank">Comprar</a>
             </div>
             <div class="product">
                 <img src="outono.jpg" alt="Outono">
@@ -55,7 +79,7 @@
                 <p>O aroma de cereja e avelã proporciona conforto, bem-estar e alegria, criando uma atmosfera acolhedora e relaxante. 
                     <br><br>Sua fragrância envolvente estimula os sentidos, promovendo momentos de prazer e descontração. Ideal para momentos de relaxamento e tranquilidade.</p>
                 <p class="price">R$44,90</p>
-                <a href="https://wa.me/message/LUCI7E7ESSUYL1" class="btn_comprar">Comprar</a>
+                <a href="https://wa.me/message/LUCI7E7ESSUYL1" id="link_comprar" class="btn_comprar">Comprar</a>
             </div>
             <div class="product">
                 <img src="inverno.jpg" alt="Inverno">
@@ -63,7 +87,7 @@
                 <p>O aroma de baunilha oferece um abraço reconfortante, aliviando o estresse e a ansiedade, enquanto proporciona conforto e relaxamento. 
                     <br><br>A vela em tons de prata adiciona elegância, guiando para um estado de serenidade e bem-estar.</p>
                 <p class="price">R$44,90</p>
-                <a href="https://wa.me/message/LUCI7E7ESSUYL1" class="btn_comprar">Comprar</a>
+                <a href="https://wa.me/message/LUCI7E7ESSUYL1" id="link_comprar" class="btn_comprar">Comprar</a>
             </div>
             <div class="product">
                 <img src="canela.jpg" alt="Canela">
@@ -71,7 +95,7 @@
                 <p>O aroma de canela não apenas melhora a concentração, mas também diminui o estresse, induzindo um estado de espírito positivo. 
                     <br><br>Nossa vela, com pedaços de casca de canela, proporciona uma experiência revitalizante e confortante, como um abraço em meio à agitação do cotidiano.</p>
                 <p class="price">R$44,90</p>
-                <a href="https://wa.me/message/LUCI7E7ESSUYL1" class="btn_comprar">Comprar</a>
+                <a href="https://wa.me/message/LUCI7E7ESSUYL1" id="link_comprar" class="btn_comprar">Comprar</a>
             </div>
         </div>
     </section>
