--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         document.getElementById('link_comprar').addEventListener('click', function() {
             // Chame o método desejado aqui
-            return gtagSendEvent("https://wa.me/message/LUCI7E7ESSUYL1");
+            gtagSendEvent("https://wa.me/message/LUCI7E7ESSUYL1");
         });
     </script>
 </head>
